--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Rick van der Eijk",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
